--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,8 @@
 		<link rel="stylesheet" type="text/css" href="css/directives/queryResultsTable.css">
 		<link rel="stylesheet" type="text/css" href="css/directives/tagCloud.css">
 
+		<link rel="stylesheet" type="text/css" href="css/directives/sunburst.css">
+
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -232,6 +234,11 @@
 						</div>
 
 					</div>
+					<div class="row">
+						<div class="col-lg-12 col-xxl-12">
+							<div sunburst class="well"></div>
+						</div>
+					</div>
 
 				</div>
 			</div>
@@ -239,6 +246,8 @@
 			<div id="tooltip-container"></div>
 
 		</div>
+
+
 		<!-- Include the xdata logging package. -->
 		<script src="lib/xdatalogger/js/draper.activity_logger-2.1.1.js"></script>
 		<script src="lib/xdatalogger/js/draper.activity_worker-2.1.1.js"></script>
@@ -283,6 +292,7 @@
 		<script src="js/charts/timelineSelectorChart.js"></script>
 		<script src="js/coremap/coremap.js"></script>
 		<script src="js/tables/table.js"></script>
+		<script src="js/charts/sunburst.js"></script>
 
 		<!-- Include our custom Angular components here for now. -->
 		<script src="js/app.js"></script>
@@ -305,5 +315,7 @@
 		<script src="js/directives/heatMap.js"></script>
 		<script src="js/directives/queryResultsTable.js"></script>
 		<script src="js/directives/tagCloud.js"></script>
+		<script src="js/directives/sunburst.js"></script>
+		<script src="js/directives/arrayTextForm.js"></script>
 	</body>
 </html>
