--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 		<!-- <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.16.custom.css"> -->
 		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.min.css">
 		<link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery.ui.theme.css">
-		<link rel="stylesheet" type="text/css" href="lib/slickgrid/css/slick.grid.css">
+		<link rel="stylesheet" type="text/css" href="js/vendor/slick-grid/css/slick.grid.css">
 		<link rel="stylesheet" type="text/css" href="lib/angular-gridster/css/angular-gridster.min.css">
 
 		<!-- Custom Stylesheet -->
@@ -191,11 +191,11 @@
 		<script src="lib/jquery.event.drag-drop/js/jquery.event.drop.js"></script>
 		<!-- <script src="lib/jquery/jquery-ui-1.8.16.custom.min.js"></script> -->
 		<script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
-		<script src="lib/slickgrid/js/slick.core.js"></script>
-		<script src="lib/slickgrid/js/slick.grid.js"></script>
-		<script src="lib/slickgrid/js/slick.dataview.js"></script>
-		<script src="lib/slickgrid/js/slick.autotooltips.js"></script>
-		<script src="lib/slickgrid/js/slick.rowselectionmodel.js"></script>
+		<script src="js/vendor/slick-grid/js/slick.core.js"></script>
+		<script src="js/vendor/slick-grid/js/slick.grid.js"></script>
+		<script src="js/vendor/slick-grid/js/slick.dataview.js"></script>
+		<script src="js/vendor/slick-grid/js/slick.autotooltips.js"></script>
+		<script src="js/vendor/slick-grid/js/slick.rowselectionmodel.js"></script>
 		<script src="lib/mergesort/js/merge-sort.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
