--- a/app/index.html
+++ b/app/index.html
@@ -189,6 +189,7 @@
         <script src="lib/jquery.tagcloud/js/jquery.tagcloud.js"></script>
         <script src="lib/threedubmedia.jquery.event/js/jquery.event.drag.js"></script>
         <script src="lib/threedubmedia.jquery.event/js/jquery.event.drop.js"></script>
+        <script src="lib/jquery.linky/js/jquery.linky.min.js"></script>
         <!-- <script src="lib/jquery/jquery-ui-1.8.16.custom.min.js"></script> -->
         <script src="lib/jquery-ui/js/jquery-ui.min.js"></script>
         <script src="js/vendor/slick-grid/js/slick.core.js"></script>
