--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
 
             <div id="data-tray" class="tray data-tray panel panel-default collapse">
                 <div class="container panel-body">
-                    <div query-results-table collapsable="true" show-data="seeData"></div>
+                    <div query-results-table show-data="seeData"></div>
                 </div>
             </div>
 
