--- a/app/index.html
+++ b/app/index.html
@@ -234,6 +234,7 @@
         <script src="js/directives/tagCloud.js"></script>
         <script src="js/time/dateBucketizer.js"></script>
         <script src="js/time/monthBucketizer.js"></script>
+        <script src="js/time/yearBucketizer.js"></script>
         <script src="js/directives/timelineSelectorChart.js"></script>
         <script src="js/directives/timelineSelector.js"></script>
         <script src="js/directives/visualizationWidget.js"></script>
