--- a/app/timelineSelectorWidget.html
+++ b/app/timelineSelectorWidget.html
@@ -121,6 +121,7 @@
         <script src="js/filterCountService.js"></script>
         <script src="js/neonDemoController.js"></script>
 
+        <script src="js/time/yearBucketizer.js"></script>
         <script src="js/time/monthBucketizer.js"></script>
         <script src="js/time/dateBucketizer.js"></script>
         <script src="js/directives/timelineSelectorChart.js"></script>
