--- a/app/index.html
+++ b/app/index.html
@@ -206,6 +206,7 @@
         <script src="js/vendor/slick-grid/js/slick.autotooltips.js"></script>
         <script src="js/vendor/slick-grid/js/slick.rowselectionmodel.js"></script>
         <script src="lib/mergesort/js/merge-sort.js"></script>
+        <script src="lib/notifyjs/js/notify-combined.min.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
         <!-- Include required non-angular support modules -->
@@ -217,6 +218,7 @@
         <script src="js/coremap/coremap.js"></script>
         <script src="js/tables/table.js"></script>
         <script src="js/charts/sunburst.js"></script>
+        <script src="js/errors/error.js"></script>
 
         <!-- Include our custom Angular components here for now. -->
         <script src="js/app.js"></script>
@@ -247,5 +249,8 @@
         <script src="js/directives/visualizationWidget.js"></script>
         <script src="js/directives/sunburst.js"></script>
         <script src="js/directives/arrayTextForm.js"></script>
+
+        <!-- Must follow inclusion of notifyjs script -->
+        <link href="css/errorStyle.css" rel="stylesheet">
     </body>
 </html>
