--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,9 @@
 
         <link rel="stylesheet" type="text/css" href="css/directives/sunburst.css">
 
+        <!-- Include tangelo directive css -->
+        <link rel="stylesheet" type="text/css" href="css/directives/tangeloMentions.css">
+        <link href="//www.fuelcdn.com/fuelux/3.5.0/css/fuelux.min.css" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -76,6 +79,12 @@
                                 <span class="glyphicon glyphicon-list"></span> View Data
                             </a>
                         </li>
+                        <li>
+                            <a data-toggle="collapse" data-parent="#trays" href=".tangelo-mentions-tray" class="collapsed"
+                               ng-click="toggleSeeMentions()">
+                                <span class="glyphicon glyphicon-list"></span> Tangelo Mentions
+                            </a>
+                        </li>
                         <!-- <li>
                             <a data-toggle="collapse" data-parent="#trays" href=".query-tray" class="collapsed">
                                 <span class="glyphicon glyphicon-pencil"></span> Write Query
@@ -94,6 +103,15 @@
 
             <!-- See Data tray -->
             <div query-results-table show-data="seeData"></div>
+
+            <!-- Tangelo Mentions -->
+            <div class="tray-mirror tangelo-mentions-tray collapse">
+                  <div class="inner" style="height: 600px"></div>
+                </div>
+                <div id="tangelo-mentions-tray" class="tray tangelo-mentions-tray panel panel-default collapse">
+            <div>
+                <div tangelo-mentions></div>
+            </div> 
 
             <!-- Query Builder tray -->
             <!-- <div>
@@ -201,6 +219,14 @@
         <script src="lib/mergesort/js/merge-sort.js"></script>
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
+        <!-- Include Tangelo Mentions files -->
+        <script src="js/vendor/vega/vega-1.3.3.min.js"></script>
+        <script src="http://localhost:8082/plugin/ui/controlPanel.js"></script>
+        <script src="js/vendor/tangelo-mentions/data.js"></script>
+        <script src="js/vendor/tangelo-mentions/history.js"></script>
+        <script src="js/vendor/tangelo-mentions/twitter.js"></script>
+        <script src="//www.fuelcdn.com/fuelux/3.5.0/js/fuelux.min.js"></script>
+
         <!-- Include required non-angular support modules -->
         <script src="js/neon-extensions/filtertable.js"></script>
         <script src="js/namespaces.js"></script>
@@ -240,5 +266,8 @@
         <script src="js/directives/visualizationWidget.js"></script>
         <script src="js/directives/sunburst.js"></script>
         <script src="js/directives/arrayTextForm.js"></script>
+
+        <!-- Tangelo Mentions directive -->
+        <script src="js/directives/tangeloMentions.js"></script>
     </body>
 </html>
